--- a/content/settings.json
+++ b/content/settings.json
@@ -1,7 +1,7 @@
 {
   "domain": "psgacademy.netlify.app",
   "currency_symbol": "R$",
-  "primary_color": "#222831",
+  "primary_color": "#e4002b",
   "theme": {
     "bootswatch": "journal",
     "custom": "ecom-beauty"
@@ -16,9 +16,9 @@
   "mini_logo": "",
   "font_family": "Open Sans",
   "favicon": "/img/uploads/logo-horizontal-azul.png",
-  "icons_font": "line-awesome",
+  "icons_font": "feather-icons",
   "country_code": "BR",
-  "secondary_color": "#393e46",
+  "secondary_color": "#002f6c",
   "icon": "/img/uploads/logo-horizontal-azul.png",
   "store_id": 51561,
   "description": "psgacademy",
